# Rede-Social

./: TODO.md  db.sqlite3  dev.py  dev.sh  pyproject.toml
src/api/: application.py  configuration.py
src/api/routes/: users.py
src/datalayer/models/: user.py
